k8s-deployment.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: ra-completion
---

apiVersion: v1
kind: Secret
metadata:
  namespace: ra-completion
  name: ra-completion
type: Opaque
stringData:
  RAUSER: '<RAUSER>'
  RAKEY: '<RAKEY>'
  RAGAME: '<RAGAME>'
  TWITTCK: '<TWITTCK>'
  TWITTST: '<TWITTST>'
  TWITTAT: '<TWITTAT>'
  TWITTTS: <TWITTTS>
  sql-user: '<sql-user>'
  sql-pass: '<sql-pass>'
  sql-host: '<sql-host>'
  sql-db:   '<sql-db>'
  sql-port: '<sql-port>'
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ra-completion
  namespace: ra-completion
  labels:
    app: ra-completion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ra-completion
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ra-completion
    spec:
      restartPolicy: Always

      containers:
      - name: ra-completion
        image: lordslair/ra-completion:latest
        env:
        - name: RAUSER
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: RAUSER
        - name: RAKEY
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: RAKEY
        - name: RAGAME
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: RAGAME
        - name: TWITTCK
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: TWITTCK
        - name: TWITTST
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: TWITTST
        - name: TWITTAT
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: TWITTAT
        - name: TWITTTS
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: TWITTTS
        - name: SQL_DBNAME
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: sql-db
        - name: SQL_DBHOST
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: sql-host
        - name: SQL_DBPORT
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: sql-port
        - name: SQL_DBPASS
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: sql-pass
        - name: SQL_DBUSER
          valueFrom:
            secretKeyRef:
              name: ra-completion
              key: sql-user
